--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <div class="loader">
-      <div class="loader-inner"></div>
-    </div>
+    <!--include _partials/preloader.jade-->
     <!--Navigation Fixed Block-->
     <header class="nl-header">
       <div class="nl-header--top">
