--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <div class="loader">
-      <div class="loader-inner"></div>
-    </div>
+    <!--include _partials/preloader.jade-->
     <header class="nl-header-log">
       <div class="nl-header-top">
         <div class="container-fluid">
