--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -393,7 +393,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>A</td>
+                              <td>G</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -402,12 +402,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm">Draft</button>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>A</td>
+                              <td>DL</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -416,12 +416,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm">Draft</button>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>A</td>
+                              <td>DR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -430,12 +430,110 @@
                             </tr>
                             <tr>
                               <td>
-                                <button class="btn btn-primary btn-sm">Draft</button>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
                               </td>
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>A</td>
+                              <td>DAL</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>DAR</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>CM</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>RWM</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>LWM</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>RS</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>LS</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>ST</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -481,77 +579,77 @@
                 <div class="midfielder-line"></div>
                 <div class="defender-line"></div>
                 <div class="player-main-block">
-                  <div class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
+                  <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-DAL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DAL" class="nl-player-block nl-DAL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-DAR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DAR" class="nl-player-block nl-DAR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-CM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="CM" class="nl-player-block nl-CM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-RWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="RWM" class="nl-player-block nl-RWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-LWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="LWM" class="nl-player-block nl-LWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-RS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="RS" class="nl-player-block nl-RS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-LS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="LS" class="nl-player-block nl-LS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div class="nl-player-block nl-ST-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="ST" class="nl-player-block nl-ST-position"><img src="assets/img/img-players.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
