# Create Team Page: add table view

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -560,6 +560,115 @@
                   </div>
                 </div>
               </div>
+              <div class="nl-team-list nl-my-teams">
+                <div class="nl-card-wrapper">
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="nl-team-card table-data-field">
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th>NAME</th>
+                            <th>POS</th>
+                            <th>FP</th>
+                            <th>SALARY</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">D</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
