--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Create Team Page | NLC2</title>
+    <title>Create Football Team | NLC2</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
@@ -993,7 +993,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>G</td>
+                              <td>FLEX</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1007,7 +1007,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DL</td>
+                              <td>K</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1021,7 +1021,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DR</td>
+                              <td>LRB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1035,7 +1035,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DAL</td>
+                              <td>RRB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1049,7 +1049,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>DAR</td>
+                              <td>QB</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1063,7 +1063,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>CM</td>
+                              <td>LWR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1077,7 +1077,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RWM</td>
+                              <td>RWR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1091,49 +1091,7 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LWM</td>
-                              <td>RMA</td>
-                              <td>ACT</td>
-                              <td>FCB</td>
-                              <td>09/17/17</td>
-                              <td><a href="#"><span class="info">i</span></a></td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
-                              </td>
-                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
-                              <td>$21000</td>
-                              <td>20</td>
-                              <td>RS</td>
-                              <td>RMA</td>
-                              <td>ACT</td>
-                              <td>FCB</td>
-                              <td>09/17/17</td>
-                              <td><a href="#"><span class="info">i</span></a></td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
-                              </td>
-                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
-                              <td>$21000</td>
-                              <td>20</td>
-                              <td>LS</td>
-                              <td>RMA</td>
-                              <td>ACT</td>
-                              <td>FCB</td>
-                              <td>09/17/17</td>
-                              <td><a href="#"><span class="info">i</span></a></td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <button class="btn btn-primary btn-sm disabled">Draft</button>
-                              </td>
-                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
-                              <td>$21000</td>
-                              <td>20</td>
-                              <td>ST</td>
+                              <td>TE</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
@@ -1174,88 +1132,68 @@
                 <button type="button" class="btn btn-team btn-big-radius active">field view</button>
                 <button type="button" class="btn btn-team btn-big-radius">list view</button>
               </div>
-              <div class="nl-team-field">
+              <div class="nl-team-field football">
                 <div class="striker-line"></div>
                 <div class="midfielder-line"></div>
                 <div class="defender-line"></div>
-                <div class="player-main-block">
-                  <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
+                <div class="player-main-block football">
+                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DAL" class="nl-player-block nl-DAL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DAR" class="nl-player-block nl-DAR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="CM" class="nl-player-block nl-CM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RWM" class="nl-player-block nl-RWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LWM" class="nl-player-block nl-LWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RS" class="nl-player-block nl-RS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
-                    </div>
-                  </div>
-                  <div data-position="LS" class="nl-player-block nl-LS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
-                    </div>
-                  </div>
-                  <div data-position="ST" class="nl-player-block nl-ST-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
-                    </div>
-                  </div>
+                  <div class="nl-player-block nl-team-logo-position"><img src="assets/img/football/team-logo.png" alt="logo"></div>
                 </div>
               </div>
               <div class="nl-team-list nl-my-teams">
@@ -1282,7 +1220,7 @@
                         <tbody>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">G</td>
+                            <td class="pos">FLEX</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1291,7 +1229,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DL</td>
+                            <td class="pos">K</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1300,7 +1238,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DR</td>
+                            <td class="pos">LRB</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1309,7 +1247,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DAL</td>
+                            <td class="pos">RRB</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1318,7 +1256,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DAR</td>
+                            <td class="pos">QB</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1327,7 +1265,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">CM</td>
+                            <td class="pos">LWR</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1336,7 +1274,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">RWM</td>
+                            <td class="pos">RWR</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
@@ -1345,34 +1283,7 @@
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">LWM</td>
-                            <td>30</td>
-                            <td>$0</td>
-                            <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>Player name</td>
-                            <td class="pos">RS</td>
-                            <td>30</td>
-                            <td>$0</td>
-                            <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>Player name</td>
-                            <td class="pos">LS</td>
-                            <td>30</td>
-                            <td>$0</td>
-                            <td>
-                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>Player name</td>
-                            <td class="pos">ST</td>
+                            <td class="pos">TE</td>
                             <td>30</td>
                             <td>$0</td>
                             <td>
