add/remove team functionality, + mobile

--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -242,7 +242,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>G</p>
+                                    <p class="nl-position">G</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -308,7 +308,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DL</p>
+                                    <p class="nl-position">DL</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -374,7 +374,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DR</p>
+                                    <p class="nl-position">DR</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -440,7 +440,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DAL</p>
+                                    <p class="nl-position">DAL</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -506,7 +506,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DAR</p>
+                                    <p class="nl-position">DAR</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -572,7 +572,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>CM</p>
+                                    <p class="nl-position">CM</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -638,7 +638,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>RWM</p>
+                                    <p class="nl-position">RWM</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -704,7 +704,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>LWM</p>
+                                    <p class="nl-position">LWM</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -770,7 +770,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>RS</p>
+                                    <p class="nl-position">RS</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -836,7 +836,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>LS</p>
+                                    <p class="nl-position">LS</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -902,7 +902,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>ST</p>
+                                    <p class="nl-position">ST</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -1171,8 +1171,8 @@
                 </div>
               </div>
               <div class="nl-team-button">
-                <button type="button" class="btn btn-team btn-big-radius active">field view</button>
-                <button type="button" class="btn btn-team btn-big-radius">list view</button>
+                <button type="button" class="btn btn-team btn-big-radius active field-view-btn">field view</button>
+                <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
               <div class="nl-team-field">
                 <div class="striker-line"></div>
@@ -1258,7 +1258,7 @@
                   </div>
                 </div>
               </div>
-              <div class="nl-team-list nl-my-teams">
+              <div class="nl-team-list nl-my-teams hide">
                 <div class="nl-card-wrapper">
                   <div class="row">
                     <div class="col-12">
