--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -1196,7 +1196,7 @@
                   <div class="nl-player-block nl-team-logo-position"><img src="assets/img/football/team-logo.png" alt="logo"></div>
                 </div>
               </div>
-              <div class="nl-team-list nl-my-teams">
+              <div class="nl-team-list nl-my-teams hide">
                 <div class="nl-card-wrapper">
                   <div class="row">
                     <div class="col-12">
